--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -18,6 +18,11 @@ Integrations connect the {{< var validmind.platform >}} with external systems or
 
 ## What you can do with integrations
 
+```{mermaid}
+graph TD
+    A[ValidMind Platform]
+```
+
 The {{< var validmind.platform >}} supports various ways to integrate with external systems and services to make changes in one system visible in the other, keeping information synchronized:
 
 :::: {.columns}
