Expand mermaid diagram

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -16,14 +16,27 @@ listing:
 
 Integrations connect the {{< var validmind.platform >}} with external systems or services, enabling bidirectional data synchronization, workflow automation, and API access.
 
-## What you can do with integrations
+## What can I do with integrations?
 
 ```{mermaid}
 graph TD
     A[ValidMind Platform]
+    B[Analytics and reporting]
+    C[Model inventory]
+    D[Workflows]
+    E[Public REST API]
+    F[Testing & documentation]
+    G[Service integration]
+    
+    A <--> B
+    A <--> C
+    A <--> D
+    A <--> E
+    A <--> F
+    A <--> G
 ```
 
-The {{< var validmind.platform >}} supports various ways to integrate with external systems and services to make changes in one system visible in the other, keeping information synchronized:
+<!-- The {{< var validmind.platform >}} supports various ways to integrate with external systems and services to make changes in one system visible in the other, keeping information synchronized: -->
 
 :::: {.columns}
 
