Little vanity edit

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -38,93 +38,122 @@ graph TD
 
 <!-- The {{< var validmind.platform >}} supports various ways to integrate with external systems and services to make changes in one system visible in the other, keeping information synchronized: -->
 
-:::: {.columns}
-
-::: {.column width="50%" .pr2}
 ### Analytics and reporting
 
 Access built-in analytics and dashboards. Or, import analytics data into external reporting tools to build unified reports that combine {{< var vm.product >}} insights with other sources.
 
-Supports: 
+**Supports**
 
-- Microsoft Power BI
-- Looker ([coming soon]{.smallcaps})
-- Snowflake ([coming soon]{.smallcaps})
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-33-ns}
+- Microsoft Power BI [&nbsp;]{.smallcaps}
 :::
 
-::: {.column width="50%" .pl2}
+::: {.w-33-ns}
+- Looker ([coming soon]{.smallcaps})
+:::
+
+::: {.w-33-ns}
+- Snowflake ([coming soon]{.smallcaps})
+:::
+::::
+
 ### Model inventory
 
 Link to models in external registries and development platforms and keep inventories synced with versions, inventory fields, and other metadata.
 
-Supports:
+**Supports**
 
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-33-ns}
 - AWS SageMaker
-- GitLab
-- MLflow
-- AWS Bedrock ([coming soon]{.smallcaps})
 - Databricks ([coming soon]{.smallcaps})
 :::
 
-::::
-
-:::: {.columns}
-
-::: {.column width="50%" .pr2}
-### Workflows
-
-Bidirectional flow of events: 
-
-- {{< var vm.product >}} workflows can notify an external system through HTTP requests that a model has reached a given state or request an update.
-
-- External systems can trigger actions inside {{< var vm.product >}} through webhooks by sending a POST request to start a workflow or resume one that is paused and waiting.
+::: {.w-33-ns}
+- MLflow
+- AWS Bedrock ([coming soon]{.smallcaps})
 :::
 
-::: {.column width="50%" .pl2}
+::: {.w-33-ns}
+- GitLab
+:::
+::::
+
+### Workflows
+
+**From {{< var vm.product >}}:** Send HTTP requests to external services when a model reaches a specific state or needs to trigger updates elsewhere.
+
+**From external systems:** Send webhooks (POST requests) to start {{< var vm.product >}} workflows or resume workflows that are paused and waiting for input.
+
 ### Public REST API
 
 Gain programmatic access to platform resources. The API supports integration with custom scripts, automation tools, and external platforms that need direct access to {{< var vm.product >}}.
 
-Perform full CRUD operations, such as:
+**CRUD examples**
 
-- Creating models
-- Updating validation status
-- Retrieving documentation
-- Managing inventory
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-33-ns}
+- Create models
+:::
+
+::: {.w-33-ns}
+- Get artifacts (findings)
+:::
+
+::: {.w-33-ns}
+- Manage model inventory
 :::
 
 ::::
 
-::: {.columns}
-
-::: {.column width="50%" .pl2}
 ### Testing & documentation
 
-Integrate the {{< var validmind.developer >}} with other development platforms to to run tests and test suites, generate documentation, and support ongoing monitoring. 
+Integrate the {{< var validmind.developer >}} with other development platforms to to run tests and test suites, generate documentation, and support ongoing monitoring. See the results locally or upload them to the {{< var validmind.platform >}}.
 
-See the results locally or upload them to the {{< var validmind.platform >}}.
+**Supports**
 
-Supports:
+:::: {.flex .flex-wrap .justify-around}
 
+::: {.w-33-ns}
 - MLflow
+:::
+
+::: {.w-33-ns}
 - AWS SageMaker
 :::
 
-::: {.column width="50%" .pl2}
-### Service integration
-
-Link to tickets in external systems and keep them synchronized. 
-
-Attach tickets to {{< var vm.product >}} artifacts, such as model artifacts, to support coordinated tracking across your validation workflow and external project or issue management tools.
-
-Supports:
-
-- ServiceNow
-- Atlassian Jira
-
+::: {.w-33-ns}
+&nbsp;
 :::
 
 ::::
+
+### Service integration
+
+Link to tickets in external systems and keep them synchronized. Attach tickets to {{< var vm.product >}} artifacts, such as model artifacts, to support coordinated tracking across your validation workflow and external project or issue management tools.
+
+**Supports**
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-33-ns}
+- ServiceNow
+:::
+
+::: {.w-33-ns}
+- Atlassian Jira
+:::
+
+::: {.w-33-ns}
+&nbsp;
+:::
+
+::::
+
 
 ## Key concepts
 
@@ -132,7 +161,7 @@ Supports:
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-50-ns}
+::: {.w-50-ns .pr3}
 
 {{< include /about/glossary/integrations/_integration.qmd >}}
 
@@ -142,7 +171,7 @@ Supports:
 
 :::
 
-::: {.w-40-ns}
+::: {.w-50-ns .pl3}
 
 {{< include /about/glossary/integrations/_http-request.qmd >}}
 
