Add image to over view topic

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -42,7 +42,7 @@ graph TD
 
 Access built-in analytics and dashboards. Or, import analytics data into external reporting tools to build unified reports that combine {{< var vm.product >}} insights with other sources.
 
-**Supports**
+**Supported**
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -63,7 +63,7 @@ Access built-in analytics and dashboards. Or, import analytics data into externa
 
 Link to models in external registries and development platforms and keep inventories synced with versions, inventory fields, and other metadata.
 
-**Supports**
+**Supported**
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -83,6 +83,10 @@ Link to models in external registries and development platforms and keep invento
 ::::
 
 ### Workflows
+
+::: {.column-margin}
+![Workflow integration example](simple-integrations-workflow.png){width=80% fig-alt="A workflow showing an automation sequence. A green start node runs an HTTP request that sends a POST to https://some.example.com/request. The workflow then moves to a webhook step that pauses until a webhook call is received. Once the webhook arrives, the flow continues to a red end node." .screenshot}
+:::
 
 **From {{< var vm.product >}}:** Send HTTP requests to external services when a model reaches a specific state or needs to trigger updates elsewhere.
 
@@ -114,7 +118,7 @@ Gain programmatic access to platform resources. The API supports integration wit
 
 Integrate the {{< var validmind.developer >}} with other development platforms to to run tests and test suites, generate documentation, and support ongoing monitoring. See the results locally or upload them to the {{< var validmind.platform >}}.
 
-**Supports**
+**Supported**
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -136,7 +140,7 @@ Integrate the {{< var validmind.developer >}} with other development platforms t
 
 Link to tickets in external systems and keep them synchronized. Attach tickets to {{< var vm.product >}} artifacts, such as model artifacts, to support coordinated tracking across your validation workflow and external project or issue management tools.
 
-**Supports**
+**Supported**
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -153,7 +157,6 @@ Link to tickets in external systems and keep them synchronized. Attach tickets t
 :::
 
 ::::
-
 
 ## Key concepts
 
