Final rename, maybe, and shuffle some interim content around

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -11,7 +11,7 @@ listing:
     contents:
       - manage-secrets.qmd 
       - configure-connections.qmd
-      - use-integrations-in-workflows.qmd
+      - usage-examples.qmd
 ---
 
 Integrations connect the {{< var validmind.platform >}} with external systems or services, enabling bidirectional data synchronization, workflow automation, and API access.
