Edit to email override for spencer

--- a/site/guide/configuration/manage-your-profile.qmd
+++ b/site/guide/configuration/manage-your-profile.qmd
@@ -108,7 +108,9 @@ To change your password:
 
 Set a custom base URL for links to the ValidMind Platform sent in notification emails.
 
-::: {.callout}
+::: {.callout-important}
+## Only enter a custom base URL if instructed by your organization administrators.
+
 Setting a custom base URL affects only you.
 :::
 
