docs: Expiry of keys (#1045)
* Updates

* Edit to email override for spencer

--- a/site/guide/configuration/manage-your-profile.qmd
+++ b/site/guide/configuration/manage-your-profile.qmd
@@ -88,6 +88,14 @@ To copy your API key, click **{{< fa clipboard >}} Copy to Clipboard**.
 
 :::
 
+::: {.callout}
+
+## To revoke and regenerate keys, click **Revoke & Regenerate Keys**.
+
+When you refresh your API and secret keys,[^3] any instances using your old keys will need to be updated.
+
+:::
+
 ### Change Password
 
 To change your password:
@@ -100,7 +108,9 @@ To change your password:
 
 Set a custom base URL for links to the ValidMind Platform sent in notification emails.
 
-::: {.callout}
+::: {.callout-important}
+## Only enter a custom base URL if instructed by your organization administrators.
+
 Setting a custom base URL affects only you.
 :::
 
@@ -116,3 +126,5 @@ Setting a custom base URL affects only you.
 [^1]: [Legal Ease.](https://validmind.com/about/legal/)
 
 [^2]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
+
+[^3]: Keys will automatically expire, or can be revoked by organization administrators on an as needed basis. The default automatic expiry for keys is `999` days.
